VS Code 기반 개발 및 디버깅 환경 구성

--- a/ch01/ch01_00_hello.html
+++ b/ch01/ch01_00_hello.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script type="module" src="./ch01_00_hello.js"></script>
+    <!-- <script type="module" src="./ch01_00_hello.js"></script> -->
+    <script type="module" src="../dist/ch01_00_hello.bundle.js"></script>
 </head>
 <body>
     
