--- a/ch01/ch01_00_hello.html
+++ b/ch01/ch01_00_hello.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 
     <!-- <script type="module" src="./ch01_00_hello.js"></script> -->
+    <!-- <script type="module" src="../src/ch01_00_hello.js"></script> -->
     <script type="module" src="../dist/ch01_00_hello.bundle.js"></script>
+    
 </head>
 <body>
     
