웹팩 output.filename 부분 옵션 수정하여 해당 폴더에 출력하도록 함.

--- a/ch02/ch02_00_hello.html
+++ b/ch02/ch02_00_hello.html
@@ -18,8 +18,8 @@
         }
     </style>
 
-    <!-- <script type="module" src="../dist/ch02_00_hello.bundle.js"></script> -->
-    <script type="module" src="../src/ch02_00_hello.js"></script>
+    <script type="module" src="../dist/ch02/ch02_00_hello.bundle.js"></script>
+    <!-- <script type="module" src="../src/ch02_00_hello.js"></script> -->
 </head>
 <body>
     <div id="canvas-container">
