--- a/ch01/ch01_00_hello.html
+++ b/ch01/ch01_00_hello.html
@@ -8,7 +8,7 @@
 
     <!-- <script type="module" src="./ch01_00_hello.js"></script> -->
     <!-- <script type="module" src="../src/ch01_00_hello.js"></script> -->
-    <script type="module" src="../dist/ch01_00_hello.bundle.js"></script>
+    <script type="module" src="../dist/ch01/ch01_00_hello.bundle.js"></script>
     
 </head>
 <body>
