--- a/ch01/ch01_00_hello.html
+++ b/ch01/ch01_00_hello.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <!-- <script type="module" src="./ch01_00_hello.js"></script> -->
+    <script type="module" src="./ch01_00_hello.js"></script>
     <!-- <script type="module" src="../src/ch01_00_hello.js"></script> -->
-    <script type="module" src="../dist/ch01/ch01_00_hello.bundle.js"></script>
+    <!-- <script type="module" src="../dist/ch01/ch01_00_hello.bundle.js"></script> -->
     
 </head>
 <body>
