--- a/ch02/ch02_02_square-arrays.html
+++ b/ch02/ch02_02_square-arrays.html
@@ -1,189 +1,182 @@
 <html>
+
 <head>
-  <title>Real-Time 3D Graphics with WebGL2</title>
-  <link rel="shortcut icon" type="image/png" href="/common/images/favicon.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-  <!-- libraries -->
-  <link rel="stylesheet" href="/common/lib/normalize.css">
+    <style type="text/css">
+        #canvas-container {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
+        #webgl-canvas {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 
-  <!-- modules -->
-  <script type="text/javascript" src="/common/js/utils.js"></script>
+    <script type="module" src="../dist/ch02/ch02_02_square_arrays.bundle.js"></script>
 
-  <!-- vertex Shader -->
-  <script id="vertex-shader" type="x-shader/x-vertex">
-    #version 300 es
-    precision mediump float;
+    <!-- <script type="text/javascript">
+        'use strict';
 
-    // Supplied vertex position attribute
-    in vec3 aVertexPosition;
+        // Global variables that are set and used
+        // across the application
+        let gl,
+            program,
+            squareVertexBuffer;
 
-    void main(void) {
-      // Simply set the position in clipspace coordinates
-      gl_Position = vec4(aVertexPosition, 1.0);
-    }
-  </script>
+        // Given an id, extract the content's of a shader script
+        // from the DOM and return the compiled shader
+        function getShader( id )
+        {
+            const script = document.getElementById( id );
+            const shaderString = script.text.trim();
 
-  <!-- fragment Shader -->
-  <script id="fragment-shader" type="x-shader/x-fragment">
-    #version 300 es
-    precision mediump float;
+            // Assign shader depending on the type of shader
+            let shader;
+            if ( script.type === 'x-shader/x-vertex' )
+            {
+                shader = gl.createShader( gl.VERTEX_SHADER );
+            }
+            else if ( script.type === 'x-shader/x-fragment' )
+            {
+                shader = gl.createShader( gl.FRAGMENT_SHADER );
+            }
+            else
+            {
+                return null;
+            }
 
-    // Color that is the result of this shader
-    out vec4 fragColor;
+            // Compile the shader using the supplied shader code
+            gl.shaderSource( shader, shaderString );
+            gl.compileShader( shader );
 
-    void main(void) {
-      // Set the result as red
-      fragColor = vec4(1.0, 0.0, 0.0, 1.0);
-    }
-  </script>
+            // Ensure the shader is valid
+            if ( !gl.getShaderParameter( shader, gl.COMPILE_STATUS ) )
+            {
+                console.error( gl.getShaderInfoLog( shader ) );
+                return null;
+            }
 
-  <script type="text/javascript">
-    'use strict';
+            return shader;
+        }
 
-    // Global variables that are set and used
-    // across the application
-    let gl,
-      program,
-      squareVertexBuffer;
+        // Create a program with the appropriate vertex and fragment shaders
+        function initProgram()
+        {
+            const vertexShader = getShader( 'vertex-shader' );
+            const fragmentShader = getShader( 'fragment-shader' );
 
-    // Given an id, extract the content's of a shader script
-    // from the DOM and return the compiled shader
-    function getShader(id) {
-      const script = document.getElementById(id);
-      const shaderString = script.text.trim();
+            // Create a program
+            program = gl.createProgram();
+            // Attach the shaders to this program
+            gl.attachShader( program, vertexShader );
+            gl.attachShader( program, fragmentShader );
+            gl.linkProgram( program );
 
-      // Assign shader depending on the type of shader
-      let shader;
-      if (script.type === 'x-shader/x-vertex') {
-        shader = gl.createShader(gl.VERTEX_SHADER);
-      }
-      else if (script.type === 'x-shader/x-fragment') {
-        shader = gl.createShader(gl.FRAGMENT_SHADER);
-      }
-      else {
-        return null;
-      }
+            if ( !gl.getProgramParameter( program, gl.LINK_STATUS ) )
+            {
+                console.error( 'Could not initialize shaders' );
+            }
 
-      // Compile the shader using the supplied shader code
-      gl.shaderSource(shader, shaderString);
-      gl.compileShader(shader);
+            // Use this program instance
+            gl.useProgram( program );
+            // We attach the location of these shader values to the program instance
+            // for easy access later in the code
+            program.aVertexPosition = gl.getAttribLocation( program, 'aVertexPosition' );
+        }
 
-      // Ensure the shader is valid
-      if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-        console.error(gl.getShaderInfoLog(shader));
-        return null;
-      }
+        // Set up the buffers for the square
+        function initBuffers()
+        {
+            /*
+              V0                    V3
+              (-0.5, 0.5, 0)        (0.5, 0.5, 0)
+              X---------------------X
+              |                     |
+              |                     |
+              |       (0, 0)        |
+              |                     |
+              |                     |
+              X---------------------X
+              V1                    V2
+              (-0.5, -0.5, 0)       (0.5, -0.5, 0)
+            */
+            const vertices = [
+                // first triangle (V0, V1, V2)
+                -0.5, 0.5, 0,
+                -0.5, -0.5, 0,
+                0.5, -0.5, 0,
 
-      return shader;
-    }
+                // second triangle (V0, V2, V3)
+                -0.5, 0.5, 0,
+                0.5, -0.5, 0,
+                0.5, 0.5, 0
+            ];
 
-    // Create a program with the appropriate vertex and fragment shaders
-    function initProgram() {
-      const vertexShader = getShader('vertex-shader');
-      const fragmentShader = getShader('fragment-shader');
+            // Setting up the VBO
+            squareVertexBuffer = gl.createBuffer();
+            gl.bindBuffer( gl.ARRAY_BUFFER, squareVertexBuffer );
+            gl.bufferData( gl.ARRAY_BUFFER, new Float32Array( vertices ), gl.STATIC_DRAW );
 
-      // Create a program
-      program = gl.createProgram();
-      // Attach the shaders to this program
-      gl.attachShader(program, vertexShader);
-      gl.attachShader(program, fragmentShader);
-      gl.linkProgram(program);
+            // Clean
+            gl.bindBuffer( gl.ARRAY_BUFFER, null );
+        }
 
-      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-        console.error('Could not initialize shaders');
-      }
+        // We call draw to render to our canvas
+        function draw()
+        {
+            // Clear the scene
+            gl.clear( gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT );
+            gl.viewport( 0, 0, gl.canvas.width, gl.canvas.height );
 
-      // Use this program instance
-      gl.useProgram(program);
-      // We attach the location of these shader values to the program instance
-      // for easy access later in the code
-      program.aVertexPosition = gl.getAttribLocation(program, 'aVertexPosition');
-    }
+            // Use the buffers we've constructed
+            gl.bindBuffer( gl.ARRAY_BUFFER, squareVertexBuffer );
+            gl.vertexAttribPointer( program.aVertexPosition, 3, gl.FLOAT, false, 0, 0 );
+            gl.enableVertexAttribArray( program.aVertexPosition );
 
-    // Set up the buffers for the square
-    function initBuffers() {
-      /*
-        V0                    V3
-        (-0.5, 0.5, 0)        (0.5, 0.5, 0)
-        X---------------------X
-        |                     |
-        |                     |
-        |       (0, 0)        |
-        |                     |
-        |                     |
-        X---------------------X
-        V1                    V2
-        (-0.5, -0.5, 0)       (0.5, -0.5, 0)
-      */
-      const vertices = [
-        // first triangle (V0, V1, V2)
-        -0.5, 0.5, 0,
-        -0.5, -0.5, 0,
-        0.5, -0.5, 0,
+            // Draw to the scene using triangle primitives and the number of vertices
+            // that define our geometry (i.e. six in this case)
+            gl.drawArrays( gl.TRIANGLES, 0, 6 );
 
-        // second triangle (V0, V2, V3)
-        -0.5, 0.5, 0,
-        0.5, -0.5, 0,
-        0.5, 0.5, 0
-      ];
+            // Clean
+            gl.bindBuffer( gl.ARRAY_BUFFER, null );
+        }
 
-      // Setting up the VBO
-      squareVertexBuffer = gl.createBuffer();
-      gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexBuffer);
-      gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
+        // Entry point to our application
+        function init()
+        {
+            // Retrieve the canvas
+            const canvas = utils.getCanvas( 'webgl-canvas' );
+            // Set the canvas to the size of the screen
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
 
-      // Clean
-      gl.bindBuffer(gl.ARRAY_BUFFER, null);
-    }
+            // Retrieve a WebGL context
+            gl = utils.getGLContext( canvas );
+            // Set the clear color to be black
+            gl.clearColor( 0, 0, 0, 1 );
 
-    // We call draw to render to our canvas
-    function draw() {
-      // Clear the scene
-      gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-      gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+            // Call the functions in an appropriate order
+            initProgram();
+            initBuffers();
+            draw();
+        }
 
-      // Use the buffers we've constructed
-      gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexBuffer);
-      gl.vertexAttribPointer(program.aVertexPosition, 3, gl.FLOAT, false, 0, 0);
-      gl.enableVertexAttribArray(program.aVertexPosition);
-
-      // Draw to the scene using triangle primitives and the number of vertices
-      // that define our geometry (i.e. six in this case)
-      gl.drawArrays(gl.TRIANGLES, 0, 6);
-
-      // Clean
-      gl.bindBuffer(gl.ARRAY_BUFFER, null);
-    }
-
-    // Entry point to our application
-    function init() {
-      // Retrieve the canvas
-      const canvas = utils.getCanvas('webgl-canvas');
-      // Set the canvas to the size of the screen
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-
-      // Retrieve a WebGL context
-      gl = utils.getGLContext(canvas);
-      // Set the clear color to be black
-      gl.clearColor(0, 0, 0, 1);
-
-      // Call the functions in an appropriate order
-      initProgram();
-      initBuffers();
-      draw();
-    }
-
-    // Call init once the webpage has loaded
-    window.onload = init;
-  </script>
+        // Call init once the webpage has loaded
+        window.onload = init;
+    </script> -->
 </head>
 
 <body>
 
-  <canvas id="webgl-canvas">
-    Your browser does not support the HTML5 canvas element.
-  </canvas>
+    <canvas id="webgl-canvas">
+        Your browser does not support the HTML5 canvas element.
+    </canvas>
 
 </body>
+
 </html>
