--- a/ch02/ch02_09_ajax-car-final.html
+++ b/ch02/ch02_09_ajax-car-final.html
@@ -1,184 +1,182 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-  <title>Real-Time 3D Graphics with WebGL2</title>
-  <link rel="shortcut icon" type="image/png" href="/common/images/favicon.png" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-  <!-- libraries -->
-  <link rel="stylesheet" href="/common/lib/normalize.css">
-  <script type="text/javascript" src="/common/lib/gl-matrix.js"></script>
+    <style type="text/css">
+        #canvas-container {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
+        #webgl-canvas {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 
-  <!-- modules -->
-  <script type="text/javascript" src="/common/js/utils.js"></script>
+    <!-- <script type="text/javascript">
+        'use strict';
 
-  <!-- vertex shader -->
-  <script id="vertex-shader" type="x-shader/x-vertex">
-    #version 300 es
-    precision mediump float;
+        let gl,
+            program,
+            parts = [],
+            projectionMatrix = mat4.create(),
+            modelViewMatrix = mat4.create();
 
-    uniform mat4 uModelViewMatrix;
-    uniform mat4 uProjectionMatrix;
+        function initProgram()
+        {
+            // Retrieve shaders based on the shader script IDs
+            const vertexShader = utils.getShader( gl, 'vertex-shader' );
+            const fragmentShader = utils.getShader( gl, 'fragment-shader' );
 
-    in vec3 aVertexPosition;
+            program = gl.createProgram();
+            gl.attachShader( program, vertexShader );
+            gl.attachShader( program, fragmentShader );
+            gl.linkProgram( program );
 
-    void main(void) {
-      gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aVertexPosition, 1.0);
-    }
-  </script>
+            if ( !gl.getProgramParameter( program, gl.LINK_STATUS ) )
+            {
+                console.error( 'Could not initialize shaders' );
+            }
 
-  <!-- fragment shader -->
-  <script id="fragment-shader" type="x-shader/x-fragment">
-    #version 300 es
-    precision mediump float;
+            gl.useProgram( program );
 
-    out vec4 fragColor;
+            program.aVertexPosition = gl.getAttribLocation( program, 'aVertexPosition' );
+            program.uProjectionMatrix = gl.getUniformLocation( program, 'uProjectionMatrix' );
+            program.uModelViewMatrix = gl.getUniformLocation( program, 'uModelViewMatrix' );
+        }
 
-    void main(void) {
-      fragColor = vec4(1.0, 1.0, 1.0, 1.0);
-    }
-  </script>
+        // Unlike before where we returned a single Promise,
+        // we are simply firing off many `fetch` requests. If required,
+        // you could employ various techniques to determine whether a series of
+        // promises have resolved. Additionally, Promise libraries such as `Bluebird`
+        // can handle such operations with ease
+        function load()
+        {
+            // There are 179 parts for this particular model.
+            // There are many ways to configure an architecture where we don't have to hard-code
+            // these values, but we've decided to keep these as simple and low-level as possible
+            // for education purposes.
+            for ( let i = 1; i < 179; i++ )
+            {
+                fetch( `/common/models/nissan-gtr/part${ i }.json` )
+                    .then( res => res.json() )
+                    .then( data =>
+                    {
 
-  <script type="text/javascript">
-    'use strict';
+                        // Create a VAO
+                        const vao = gl.createVertexArray();
 
-    let gl,
-      program,
-      parts = [],
-      projectionMatrix = mat4.create(),
-      modelViewMatrix = mat4.create();
+                        // Bind VAO
+                        gl.bindVertexArray( vao );
 
-    function initProgram() {
-      // Retrieve shaders based on the shader script IDs
-      const vertexShader = utils.getShader(gl, 'vertex-shader');
-      const fragmentShader = utils.getShader(gl, 'fragment-shader');
+                        // VBO
+                        const vertexBufferObject = gl.createBuffer();
+                        gl.bindBuffer( gl.ARRAY_BUFFER, vertexBufferObject );
+                        gl.bufferData( gl.ARRAY_BUFFER, new Float32Array( data.vertices ), gl.STATIC_DRAW );
 
-      program = gl.createProgram();
-      gl.attachShader(program, vertexShader);
-      gl.attachShader(program, fragmentShader);
-      gl.linkProgram(program);
+                        // Configure instructions
+                        gl.enableVertexAttribArray( program.aVertexPosition );
+                        gl.vertexAttribPointer( program.aVertexPosition, 3, gl.FLOAT, false, 0, 0 );
 
-      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-        console.error('Could not initialize shaders');
-      }
+                        // IBO
+                        const indexBufferObject = gl.createBuffer();
+                        gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, indexBufferObject );
+                        gl.bufferData( gl.ELEMENT_ARRAY_BUFFER, new Uint16Array( data.indices ), gl.STATIC_DRAW );
 
-      gl.useProgram(program);
+                        // Attach them for later access
+                        data.vao = vao;
+                        data.ibo = indexBufferObject;
 
-      program.aVertexPosition = gl.getAttribLocation(program, 'aVertexPosition');
-      program.uProjectionMatrix = gl.getUniformLocation(program, 'uProjectionMatrix');
-      program.uModelViewMatrix = gl.getUniformLocation(program, 'uModelViewMatrix');
-    }
+                        // Push data onto parts array
+                        parts.push( data );
 
-    // Unlike before where we returned a single Promise,
-    // we are simply firing off many `fetch` requests. If required,
-    // you could employ various techniques to determine whether a series of
-    // promises have resolved. Additionally, Promise libraries such as `Bluebird`
-    // can handle such operations with ease
-    function load() {
-      // There are 179 parts for this particular model.
-      // There are many ways to configure an architecture where we don't have to hard-code
-      // these values, but we've decided to keep these as simple and low-level as possible
-      // for education purposes.
-      for (let i = 1; i < 179; i++) {
-        fetch(`/common/models/nissan-gtr/part${i}.json`)
-        .then(res => res.json())
-        .then(data => {
+                        // Clean
+                        gl.bindVertexArray( null );
+                        gl.bindBuffer( gl.ARRAY_BUFFER, null );
+                        gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, null );
+                    } )
+                    .catch( console.error );
+            }
+        }
 
-          // Create a VAO
-          const vao = gl.createVertexArray();
+        function draw()
+        {
+            gl.clear( gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT );
+            gl.viewport( 0, 0, gl.canvas.width, gl.canvas.height );
 
-          // Bind VAO
-          gl.bindVertexArray(vao);
+            // We will discuss these operations in later chapters
+            mat4.perspective( projectionMatrix, 45, gl.canvas.width / gl.canvas.height, 10, 10000 );
+            mat4.identity( modelViewMatrix );
+            mat4.translate( modelViewMatrix, modelViewMatrix, [ -10, 0, -100 ] );
+            mat4.rotate( modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [ 1, 0, 0 ] );
+            mat4.rotate( modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [ 0, 1, 0 ] );
 
-          // VBO
-          const vertexBufferObject = gl.createBuffer();
-          gl.bindBuffer(gl.ARRAY_BUFFER, vertexBufferObject);
-          gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(data.vertices), gl.STATIC_DRAW);
+            gl.uniformMatrix4fv( program.uProjectionMatrix, false, projectionMatrix );
+            gl.uniformMatrix4fv( program.uModelViewMatrix, false, modelViewMatrix );
 
-          // Configure instructions
-          gl.enableVertexAttribArray(program.aVertexPosition);
-          gl.vertexAttribPointer(program.aVertexPosition, 3, gl.FLOAT, false, 0, 0);
+            // Iterate over every part inside of the `parts` array
+            parts.forEach( part =>
+            {
+                // Bind
+                gl.bindVertexArray( part.vao );
+                gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, part.ibo );
 
-          // IBO
-          const indexBufferObject = gl.createBuffer();
-          gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBufferObject);
-          gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(data.indices), gl.STATIC_DRAW);
+                // Draw
+                gl.drawElements( gl.LINES, part.indices.length, gl.UNSIGNED_SHORT, 0 );
 
-          // Attach them for later access
-          data.vao = vao;
-          data.ibo = indexBufferObject;
+                // Clean
+                gl.bindVertexArray( null );
+                gl.bindBuffer( gl.ARRAY_BUFFER, null );
+                gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, null );
+            } );
+        }
 
-          // Push data onto parts array
-          parts.push(data);
+        function render()
+        {
+            requestAnimationFrame( render );
+            draw();
+        }
 
-          // Clean
-          gl.bindVertexArray(null);
-          gl.bindBuffer(gl.ARRAY_BUFFER, null);
-          gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
-        })
-        .catch(console.error);
-      }
-    }
+        function init()
+        {
+            const canvas = utils.getCanvas( 'webgl-canvas' );
+            // Handle automatic resizing
+            utils.autoResizeCanvas( canvas );
 
-    function draw() {
-      gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-      gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+            // Retrieve a valid WebGL2 context
+            gl = utils.getGLContext( canvas );
+            gl.clearColor( 0, 0, 0, 1 );
+            gl.enable( gl.DEPTH_TEST );
 
-      // We will discuss these operations in later chapters
-      mat4.perspective(projectionMatrix, 45, gl.canvas.width / gl.canvas.height, 10, 10000);
-      mat4.identity(modelViewMatrix);
-      mat4.translate(modelViewMatrix, modelViewMatrix, [-10, 0, -100]);
-      mat4.rotate(modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [1, 0, 0]);
-      mat4.rotate(modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [0, 1, 0]);
+            initProgram();
+            // We are no longer blocking the render until `load` has resolved,
+            // as we're not returning a Promise.
+            load();
+            render();
+        }
 
-      gl.uniformMatrix4fv(program.uProjectionMatrix, false, projectionMatrix);
-      gl.uniformMatrix4fv(program.uModelViewMatrix, false, modelViewMatrix);
+        window.onload = init;
+    </script> -->
 
-      // Iterate over every part inside of the `parts` array
-      parts.forEach(part => {
-        // Bind
-        gl.bindVertexArray(part.vao);
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, part.ibo);
+    <script type="module" src="../dist/ch02/ch02_09_ajax_car_final.bundle.js"></script>
 
-        // Draw
-        gl.drawElements(gl.LINES, part.indices.length, gl.UNSIGNED_SHORT, 0);
-
-        // Clean
-        gl.bindVertexArray(null);
-        gl.bindBuffer(gl.ARRAY_BUFFER, null);
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
-      });
-    }
-
-    function render() {
-      requestAnimationFrame(render);
-      draw();
-    }
-
-    function init() {
-      const canvas = utils.getCanvas('webgl-canvas');
-      // Handle automatic resizing
-      utils.autoResizeCanvas(canvas);
-
-      // Retrieve a valid WebGL2 context
-      gl = utils.getGLContext(canvas);
-      gl.clearColor(0, 0, 0, 1);
-      gl.enable(gl.DEPTH_TEST);
-
-      initProgram();
-      // We are no longer blocking the render until `load` has resolved,
-      // as we're not returning a Promise.
-      load();
-      render();
-    }
-
-    window.onload = init;
-  </script>
 </head>
 
 <body>
-
-  <canvas id="webgl-canvas">
-    Your browser does not support the HTML5 canvas element.
-  </canvas>
-
+    <div id="canvas-container">
+        <canvas id="webgl-canvas">
+            Your browser does not support HTML5 canvas element
+        </canvas>
+        <h1>
+            WebGL Canvas
+        </h1>
+    </div> 
 </body>
+
 </html>
