--- a/ch02/ch02_07_ajax-cone.html
+++ b/ch02/ch02_07_ajax-cone.html
@@ -143,7 +143,7 @@
       gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
 
       // We will cover these operations in later chapters
-      mat4.perspective(projectionMatrix, 45, gl.canvas.width / gl.canvas.height, 0.1, 10000);
+      mat4.perspective(projectionMatrix, 45 * (Math.PI / 180), gl.canvas.width / gl.canvas.height, 0.1, 10000);
       mat4.identity(modelViewMatrix);
       mat4.translate(modelViewMatrix, modelViewMatrix, [0, 0, -5.0]);
 
