--- a/ch02/ch02_09_ajax-car-final.html
+++ b/ch02/ch02_09_ajax-car-final.html
@@ -1,182 +1,184 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Real-Time 3D Graphics with WebGL2</title>
+  <link rel="shortcut icon" type="image/png" href="/common/images/favicon.png" />
 
-    <style type="text/css">
-        #canvas-container {
-            width: 100%;
-            height: 100%;
-            text-align: center;
-        }
-        #webgl-canvas {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+  <!-- libraries -->
+  <link rel="stylesheet" href="/common/lib/normalize.css">
+  <script type="text/javascript" src="/common/lib/gl-matrix.js"></script>
 
-    <!-- <script type="text/javascript">
-        'use strict';
+  <!-- modules -->
+  <script type="text/javascript" src="/common/js/utils.js"></script>
 
-        let gl,
-            program,
-            parts = [],
-            projectionMatrix = mat4.create(),
-            modelViewMatrix = mat4.create();
+  <!-- vertex shader -->
+  <script id="vertex-shader" type="x-shader/x-vertex">
+    #version 300 es
+    precision mediump float;
 
-        function initProgram()
-        {
-            // Retrieve shaders based on the shader script IDs
-            const vertexShader = utils.getShader( gl, 'vertex-shader' );
-            const fragmentShader = utils.getShader( gl, 'fragment-shader' );
+    uniform mat4 uModelViewMatrix;
+    uniform mat4 uProjectionMatrix;
 
-            program = gl.createProgram();
-            gl.attachShader( program, vertexShader );
-            gl.attachShader( program, fragmentShader );
-            gl.linkProgram( program );
+    in vec3 aVertexPosition;
 
-            if ( !gl.getProgramParameter( program, gl.LINK_STATUS ) )
-            {
-                console.error( 'Could not initialize shaders' );
-            }
+    void main(void) {
+      gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aVertexPosition, 1.0);
+    }
+  </script>
 
-            gl.useProgram( program );
+  <!-- fragment shader -->
+  <script id="fragment-shader" type="x-shader/x-fragment">
+    #version 300 es
+    precision mediump float;
 
-            program.aVertexPosition = gl.getAttribLocation( program, 'aVertexPosition' );
-            program.uProjectionMatrix = gl.getUniformLocation( program, 'uProjectionMatrix' );
-            program.uModelViewMatrix = gl.getUniformLocation( program, 'uModelViewMatrix' );
-        }
+    out vec4 fragColor;
 
-        // Unlike before where we returned a single Promise,
-        // we are simply firing off many `fetch` requests. If required,
-        // you could employ various techniques to determine whether a series of
-        // promises have resolved. Additionally, Promise libraries such as `Bluebird`
-        // can handle such operations with ease
-        function load()
-        {
-            // There are 179 parts for this particular model.
-            // There are many ways to configure an architecture where we don't have to hard-code
-            // these values, but we've decided to keep these as simple and low-level as possible
-            // for education purposes.
-            for ( let i = 1; i < 179; i++ )
-            {
-                fetch( `/common/models/nissan-gtr/part${ i }.json` )
-                    .then( res => res.json() )
-                    .then( data =>
-                    {
+    void main(void) {
+      fragColor = vec4(1.0, 1.0, 1.0, 1.0);
+    }
+  </script>
 
-                        // Create a VAO
-                        const vao = gl.createVertexArray();
+  <script type="text/javascript">
+    'use strict';
 
-                        // Bind VAO
-                        gl.bindVertexArray( vao );
+    let gl,
+      program,
+      parts = [],
+      projectionMatrix = mat4.create(),
+      modelViewMatrix = mat4.create();
 
-                        // VBO
-                        const vertexBufferObject = gl.createBuffer();
-                        gl.bindBuffer( gl.ARRAY_BUFFER, vertexBufferObject );
-                        gl.bufferData( gl.ARRAY_BUFFER, new Float32Array( data.vertices ), gl.STATIC_DRAW );
+    function initProgram() {
+      // Retrieve shaders based on the shader script IDs
+      const vertexShader = utils.getShader(gl, 'vertex-shader');
+      const fragmentShader = utils.getShader(gl, 'fragment-shader');
 
-                        // Configure instructions
-                        gl.enableVertexAttribArray( program.aVertexPosition );
-                        gl.vertexAttribPointer( program.aVertexPosition, 3, gl.FLOAT, false, 0, 0 );
+      program = gl.createProgram();
+      gl.attachShader(program, vertexShader);
+      gl.attachShader(program, fragmentShader);
+      gl.linkProgram(program);
 
-                        // IBO
-                        const indexBufferObject = gl.createBuffer();
-                        gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, indexBufferObject );
-                        gl.bufferData( gl.ELEMENT_ARRAY_BUFFER, new Uint16Array( data.indices ), gl.STATIC_DRAW );
+      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+        console.error('Could not initialize shaders');
+      }
 
-                        // Attach them for later access
-                        data.vao = vao;
-                        data.ibo = indexBufferObject;
+      gl.useProgram(program);
 
-                        // Push data onto parts array
-                        parts.push( data );
+      program.aVertexPosition = gl.getAttribLocation(program, 'aVertexPosition');
+      program.uProjectionMatrix = gl.getUniformLocation(program, 'uProjectionMatrix');
+      program.uModelViewMatrix = gl.getUniformLocation(program, 'uModelViewMatrix');
+    }
 
-                        // Clean
-                        gl.bindVertexArray( null );
-                        gl.bindBuffer( gl.ARRAY_BUFFER, null );
-                        gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, null );
-                    } )
-                    .catch( console.error );
-            }
-        }
+    // Unlike before where we returned a single Promise,
+    // we are simply firing off many `fetch` requests. If required,
+    // you could employ various techniques to determine whether a series of
+    // promises have resolved. Additionally, Promise libraries such as `Bluebird`
+    // can handle such operations with ease
+    function load() {
+      // There are 179 parts for this particular model.
+      // There are many ways to configure an architecture where we don't have to hard-code
+      // these values, but we've decided to keep these as simple and low-level as possible
+      // for education purposes.
+      for (let i = 1; i < 179; i++) {
+        fetch(`/common/models/nissan-gtr/part${i}.json`)
+        .then(res => res.json())
+        .then(data => {
 
-        function draw()
-        {
-            gl.clear( gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT );
-            gl.viewport( 0, 0, gl.canvas.width, gl.canvas.height );
+          // Create a VAO
+          const vao = gl.createVertexArray();
 
-            // We will discuss these operations in later chapters
-            mat4.perspective( projectionMatrix, 45, gl.canvas.width / gl.canvas.height, 10, 10000 );
-            mat4.identity( modelViewMatrix );
-            mat4.translate( modelViewMatrix, modelViewMatrix, [ -10, 0, -100 ] );
-            mat4.rotate( modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [ 1, 0, 0 ] );
-            mat4.rotate( modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [ 0, 1, 0 ] );
+          // Bind VAO
+          gl.bindVertexArray(vao);
 
-            gl.uniformMatrix4fv( program.uProjectionMatrix, false, projectionMatrix );
-            gl.uniformMatrix4fv( program.uModelViewMatrix, false, modelViewMatrix );
+          // VBO
+          const vertexBufferObject = gl.createBuffer();
+          gl.bindBuffer(gl.ARRAY_BUFFER, vertexBufferObject);
+          gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(data.vertices), gl.STATIC_DRAW);
 
-            // Iterate over every part inside of the `parts` array
-            parts.forEach( part =>
-            {
-                // Bind
-                gl.bindVertexArray( part.vao );
-                gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, part.ibo );
+          // Configure instructions
+          gl.enableVertexAttribArray(program.aVertexPosition);
+          gl.vertexAttribPointer(program.aVertexPosition, 3, gl.FLOAT, false, 0, 0);
 
-                // Draw
-                gl.drawElements( gl.LINES, part.indices.length, gl.UNSIGNED_SHORT, 0 );
+          // IBO
+          const indexBufferObject = gl.createBuffer();
+          gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBufferObject);
+          gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(data.indices), gl.STATIC_DRAW);
 
-                // Clean
-                gl.bindVertexArray( null );
-                gl.bindBuffer( gl.ARRAY_BUFFER, null );
-                gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, null );
-            } );
-        }
+          // Attach them for later access
+          data.vao = vao;
+          data.ibo = indexBufferObject;
 
-        function render()
-        {
-            requestAnimationFrame( render );
-            draw();
-        }
+          // Push data onto parts array
+          parts.push(data);
 
-        function init()
-        {
-            const canvas = utils.getCanvas( 'webgl-canvas' );
-            // Handle automatic resizing
-            utils.autoResizeCanvas( canvas );
+          // Clean
+          gl.bindVertexArray(null);
+          gl.bindBuffer(gl.ARRAY_BUFFER, null);
+          gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
+        })
+        .catch(console.error);
+      }
+    }
 
-            // Retrieve a valid WebGL2 context
-            gl = utils.getGLContext( canvas );
-            gl.clearColor( 0, 0, 0, 1 );
-            gl.enable( gl.DEPTH_TEST );
+    function draw() {
+      gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+      gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
 
-            initProgram();
-            // We are no longer blocking the render until `load` has resolved,
-            // as we're not returning a Promise.
-            load();
-            render();
-        }
+      // We will discuss these operations in later chapters
+      mat4.perspective(projectionMatrix, 45 * (Math.PI / 180), gl.canvas.width / gl.canvas.height, 10, 10000);
+      mat4.identity(modelViewMatrix);
+      mat4.translate(modelViewMatrix, modelViewMatrix, [-10, 0, -100]);
+      mat4.rotate(modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [1, 0, 0]);
+      mat4.rotate(modelViewMatrix, modelViewMatrix, 30 * Math.PI / 180, [0, 1, 0]);
 
-        window.onload = init;
-    </script> -->
+      gl.uniformMatrix4fv(program.uProjectionMatrix, false, projectionMatrix);
+      gl.uniformMatrix4fv(program.uModelViewMatrix, false, modelViewMatrix);
 
-    <script type="module" src="../dist/ch02/ch02_09_ajax_car_final.bundle.js"></script>
+      // Iterate over every part inside of the `parts` array
+      parts.forEach(part => {
+        // Bind
+        gl.bindVertexArray(part.vao);
+        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, part.ibo);
 
+        // Draw
+        gl.drawElements(gl.LINES, part.indices.length, gl.UNSIGNED_SHORT, 0);
+
+        // Clean
+        gl.bindVertexArray(null);
+        gl.bindBuffer(gl.ARRAY_BUFFER, null);
+        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
+      });
+    }
+
+    function render() {
+      requestAnimationFrame(render);
+      draw();
+    }
+
+    function init() {
+      const canvas = utils.getCanvas('webgl-canvas');
+      // Handle automatic resizing
+      utils.autoResizeCanvas(canvas);
+
+      // Retrieve a valid WebGL2 context
+      gl = utils.getGLContext(canvas);
+      gl.clearColor(0, 0, 0, 1);
+      gl.enable(gl.DEPTH_TEST);
+
+      initProgram();
+      // We are no longer blocking the render until `load` has resolved,
+      // as we're not returning a Promise.
+      load();
+      render();
+    }
+
+    window.onload = init;
+  </script>
 </head>
 
 <body>
-    <div id="canvas-container">
-        <canvas id="webgl-canvas">
-            Your browser does not support HTML5 canvas element
-        </canvas>
-        <h1>
-            WebGL Canvas
-        </h1>
-    </div> 
-</body>
 
+  <canvas id="webgl-canvas">
+    Your browser does not support the HTML5 canvas element.
+  </canvas>
+
+</body>
 </html>
