--- a/ch03/ch03_08_showroom.html
+++ b/ch03/ch03_08_showroom.html
@@ -148,7 +148,7 @@
       gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
 
       // We will discuss these operations in later chapters
-      mat4.perspective(projectionMatrix, 45, gl.canvas.width / gl.canvas.height, 1, 10000);
+      mat4.perspective(projectionMatrix, 45 * (Math.PI / 180), gl.canvas.width / gl.canvas.height, 1, 10000);
       mat4.identity(modelViewMatrix);
       mat4.translate(modelViewMatrix, modelViewMatrix, [0, 0, distance]);
       mat4.rotate(modelViewMatrix, modelViewMatrix, 20 * Math.PI / 180, [1, 0, 0]);
