--- a/ch04/ch04_05_car.html
+++ b/ch04/ch04_05_car.html
@@ -188,7 +188,7 @@
 
     // Update transforms
     function updateTransforms() {
-      mat4.perspective(projectionMatrix, 45, gl.canvas.width / gl.canvas.height, 0.1, 5000);
+      mat4.perspective(projectionMatrix, 45 * (Math.PI / 180), gl.canvas.width / gl.canvas.height, 0.1, 5000);
     }
 
     // Set the matrix uniforms
